crates/cribo/tests/snapshots/execution_results@bundle_third_party_bare_dist_info.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_bare_dist_info/main.py
---
ExecutionResults {
    status: Success,
    stdout: "bare-dist-info",
    stderr: "",
}
