crates/cribo/tests/snapshots/execution_results@bundle_third_party_importlib_evaluable_package.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_importlib_evaluable_package/main.py
---
ExecutionResults {
    status: Success,
    stdout: "context evaluated\nbundled-eval-pkg",
    stderr: "",
}
