crates/cribo/tests/snapshots/execution_results@bundle_third_party_importlib_module_anchor.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_importlib_module_anchor/main.py
---
ExecutionResults {
    status: Success,
    stdout: "anchor is not a package\nanchor sees real-submodule",
    stderr: "",
}
