crates/cribo/tests/snapshots/execution_results@bundle_third_party_importlib_shadowed_callee.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_importlib_shadowed_callee/main.py
---
ExecutionResults {
    status: Success,
    stdout: "custom:shadow_pkg.backend\nreal-backend",
    stderr: "",
}
