crates/cribo/tests/snapshots/execution_results@bundle_third_party_importlib_static_parent_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_importlib_static_parent_init/main.py
---
ExecutionResults {
    status: Success,
    stdout: "sub sees: parent initialized",
    stderr: "",
}
