crates/cribo/tests/snapshots/execution_results@bundle_third_party_importlib_static_requires_dist.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundle_third_party_importlib_static_requires_dist/main.py
---
ExecutionResults {
    status: Success,
    stdout: "plugin",
    stderr: "",
}
